2002-01-05  Sam Steingold  <sds@gnu.org>

	SOCKET-STREAM-PEER et al now work for buffered sockets too
	* stream.d (SocketChannel): new macro
	(SOCKET-SERVER, socket_handle, publish_host_data)
	(SOCKET-STREAM-HANDLE): use it
	Reported by Todd Sabin <tas@webspan.net>

2002-01-05  Sam Steingold  <sds@gnu.org>

	* stream.d (BufferedStream_buffer_address): new macro, use it
	along with BufferedStream_channel() and BufferedStream_buffer()

2002-01-05  Sam Steingold  <sds@gnu.org>

	some new macros for brevity
	* pathname.d (WIN32_ERROR_NOT_FOUND) [WIN32_NATIVE]: new macro
	(check_noname, check_notdir, check_delete_open): new macros

2002-01-03  Stefan Kain  <stefan.kain@freenet.de>

	* pathname.d: translated all comments

2002-01-03  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (OGETTEXT): new macro
	* gettext/po/clisp-xgettext: recongnize the new OGETTEXT macro

2001-12-26   Stefan Kain  <stefan.kain@freenet.de>

	* trace.lisp: translated all comments

2002-01-01  Todd Sabin  <tas@webspan.net>
	    Sam Steingold  <sds@gnu.org>

	* stream.d (BUILT-IN-STREAM-SET-ELEMENT-TYPE): fixed a crash for
	`strmtype_twoway_socket'

2002-01-01  Sam Steingold  <sds@gnu.org>

	unified some error messages
	* pathname.d (fehler_file_exists): no args: get caller from
	subr_self and pathname from STACK_0 (a la fehler_file_not_exists)
	(rename_file): modified accordingly
	(open_file): use fehler_file_not_exists() and fehler_file_exists()

2002-01-01  Sam Steingold  <sds@gnu.org>

	* init.lisp (sys::remove-old-definitions): CERROR for exported CL
	symbols even when there is no definition

2001-12-25  Sam Steingold  <sds@gnu.org>

	make DESCRIBE break long lines
	* describe.lisp (describe-stream): new slot BUFFER (word-buffered)
	(describe-stream-flush-buffer): new function to flush the BUFFER
	(stream-write-char, stream-finish-output, stream-force-output):
	use it
	(stream-line-column, stream-start-line-p, stream-clear-output):
	account for BUFFER